;; we start by ignoring node_modules. if you need to consume an OCaml
;; project from `node_modules`, this should work:
;; - remove the `dirs` stanza below
;; - add a `(subdir node_modules (dirs only_your_package))`

; (dirs :standard \ node_modules)

(subdir
 node_modules/bs-css/src
 (library
  (name bs_css)
  (modes melange)
  (wrapped false)
  (flags :standard -w -32-34)
  (preprocess
   (pps melange.ppx))))

(subdir
 node_modules/bs-css-emotion/src
 (library
  (name bs_css_emotion)
  (modes melange)
  (wrapped false)
  (libraries bs_css)
  (flags :standard -w -32-34-44)
  (preprocess
   (pps melange.ppx))))
