(lang dune 3.8)

(using melange 0.1)

(name reasonml-country-select)

(license "MIT")

(maintainers "John Haley")

(authors "john@haley.io")

(homepage https://github.com/johnhaley81/reasonml-country-select)

(bug_reports https://github.com/johnhaley81/reasonml-country-select/issues)

(package
 (allow_empty)
 (name reasonml-country-select)
 (synopsis "Country Selection using React")
 (description
  "An application showcasing a react component that allows you to select a country."))
