opam-version: "2.0"
synopsis: "Country Selection using React"
description: "An application showcasing a react component that allows you to select a country."
maintainer: ["John Haley"]
authors: ["John Haley"]
license: "MIT"
homepage: "https://github.com/johnhaley81/reasonml-country-select"
bug-reports: "https://github.com/johnhaley81/reasonml-country-select/issues"
depends: [
  "dot-merlin-reader" {dev}
  "dune" {>= "3.8"}
  "melange" {>= "1.0.0"}
  "ocaml" {>= "4.14.0" & < "5.0.0"}
  "ocaml-lsp-server" {dev}
  "odoc" {with-doc}
  "reactjs-jsx-ppx" {>= "1.0.0"}
  "reason" {>= "3.8.1" & < "4.0.0"}
  "reason-react" {>= "0.11.0"}
  "relude" {dev}
  "rescript-syntax" {>= "1.0.0"}
]
dev-repo: "git+https://github.com/johnhaley81/reasonml-country-select.git"
pin-depends: [
  [ "relude.dev" "git+https://github.com/trite/relude.git#dunification" ]
  [ "bastet.dev" "git+https://github.com/johnhaley81/bastet.git#6c8f53a9da55254691df49bddf96b279b38be204" ]
]
